logs/m3-pushme.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/m3_pushme-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pushme'...
Compiling './lib/python3.5/site-packages/pushme/client.py'...
***   File "./lib/python3.5/site-packages/pushme/client.py", line 36
    print "Messages will be sent to %s..." % (
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pushme/demo'...
Listing './lib/python3.5/site-packages/pushme/demo/templates'...
Listing './lib/python3.5/site-packages/pushme/mq'...
Compiling './lib/python3.5/site-packages/pushme/mq/backend_snakemq.py'...
***   File "./lib/python3.5/site-packages/pushme/mq/backend_snakemq.py", line 30
    print "Connected: ", conn_id
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pushme/options.py'...
***   File "./lib/python3.5/site-packages/pushme/options.py", line 77
    print "Unknown arg(s)!:\n" + "\n".join(unparsed)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pushme/server.py'...
***   File "./lib/python3.5/site-packages/pushme/server.py", line 104
    print "%s started at %s:%s" % (PROG_NAME, config.host, config.port)
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pushme/static'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/snakeMQ-1.4.egg-info'...
Listing './lib/python3.5/site-packages/snakemq'...
Listing './lib/python3.5/site-packages/snakemq/storage'...
Listing './lib/python3.5/site-packages/sockjs'...
Listing './lib/python3.5/site-packages/sockjs/tornado'...
Listing './lib/python3.5/site-packages/sockjs/tornado/transports'...
Listing './lib/python3.5/site-packages/sockjs_tornado-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/unittests'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
